--- a/index.html
+++ b/index.html
@@ -687,9 +687,9 @@
 
         <text dy="-2">
             <textPath style="font-family: fantasy;" xlink:href="#partialPath" startOffset="12">
-                🌹Happy Women's Day
-                🌹.........................................................................................................................................🌹From
-                With Love 8/3!🌹
+                🌹Vạn Sự Như Ý 8386
+                🌹.........................................................................................................................................🌹Chúc
+                Mừng mywife 20/10!🌹
             </textPath>
         </text>
 
