--- a/index.html
+++ b/index.html
@@ -687,9 +687,9 @@
 
         <text dy="-2">
             <textPath style="font-family: fantasy;" xlink:href="#partialPath" startOffset="12">
-                🌹Vạn Sự Như Ý 8386
-                🌹.........................................................................................................................................🌹Chúc
-                Mừng mywife 20/10!🌹
+                🌹Happy VN Woman's Day
+                🌹.........................................................................................................................................🌹From
+                With Love 20/10 !🌹
             </textPath>
         </text>
 
@@ -1103,7 +1103,7 @@
         // .textLetter text h2
         let indexText = 0;
         let textLetter = document.querySelector('.textLetter h2');
-        const textLetterH2 = "Gửi mẹ!";
+        const textLetterH2 = "Gửi bạn Thủy dấu yêu!";
         let timoutTextLetter;
 
         function textCharLetter() {
@@ -1131,7 +1131,7 @@
         // chữ của thư bạn muốn gửi
         let indexTextContent = 0;
         let textLetterContent = document.querySelector('.contentLetter');
-        const textLetterP = "Hôm nay là ngày 20/10/2024. Xin gửi lời chúc tới người con yêu thương nhất. Luôn vui vẻ, luôn hạnh phúc và luôn may mắn trong cuộc sống, ngày càng xinh đẹp. Xin gửi tất cả lời chúc tốt đẹp đến với mẹ. Love Mom💗";
+        const textLetterP = "Hôm nay là ngày 20/10/2024. Em Dũng ông trùm mafia ông trùm kéo view số 1 Việt Nam, chúc cậu luôn xinh đẹp, dịu dàng và gặp nhiều may mắn, sức khỏe dồi dào, tiền vào ào ạt. Lớp Du💗";
         let timoutTextLetterContent;
         function textCharLetterContent() {
             if (indexTextContent < textLetterP.length) {
