--- a/index.html
+++ b/index.html
@@ -1131,7 +1131,7 @@
         // chữ của thư bạn muốn gửi
         let indexTextContent = 0;
         let textLetterContent = document.querySelector('.contentLetter');
-        const textLetterP = "Hôm nay là ngày 20/10/2024. Em Dũng ông trùm mafia ông trùm kéo view số 1 Việt Nam, chúc cậu luôn xinh đẹp, dịu dàng và gặp nhiều may mắn, sức khỏe dồi dào, tiền vào ào ạt. Lớp Du💗";
+        const textLetterP = "Hôm nay là ngày 20/10/2024. Em Dũng mafia ông trùm kéo view số 1 Việt Nam, chúc cậu luôn xinh đẹp, dịu dàng và gặp nhiều may mắn, sức khỏe dồi dào, tiền vào ào ạt. Lớp Du💗";
         let timoutTextLetterContent;
         function textCharLetterContent() {
             if (indexTextContent < textLetterP.length) {
