--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 
 <body>
     <div id="child">
-        <h4>💗Trân Thành Chin Nũi Thuỷ Iu🥹</h4>
+        <h4>💗Trân Thành
+        Chin Nũi 
+        Thuỷ Iu🥹</h4>
     </div>
     <!--这里写名字❤！！！-->
     <canvas id="pinkboard"></canvas>
