--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@
 
 <body>
     <div id="child">
-        <h4>💗Trân Thành
-        Chin Nũi 
-        Thuỷ Iu🥹</h4>
+        <strong><h4>💗Chin Nũi💓</h4></strong>
     </div>
     <!--这里写名字❤！！！-->
     <canvas id="pinkboard"></canvas>
