--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 
 <body>
     <div id="child">
-        <strong><h4>💗Chin Nũi💓</h4></strong>
+       <span style="font-family: Arial">
+           <strong><h4>💗Chin Nũi Nhìu💓</h4></strong>
+       </span>
     </div>
     <!--这里写名字❤！！！-->
     <canvas id="pinkboard"></canvas>
