--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
 <body>
     <div id="child">
        <span style="font-family: Arial">
-           <strong><h4>💗I'M SORRY MYWIFE💗</h4></strong>
+           <strong><h4>💗I'M SORRY
+              <br>
+               MYWIFE💗</h4></strong>
        </span>
     </div>
     <!--这里写名字❤！！！-->
