--- a/index.html
+++ b/index.html
@@ -108,11 +108,13 @@
 
 <body>
     <div id="child">
+    <div class="a">
        <span style="font-family: Arial">
            <strong><h4>💗I'M SORRY
               <br>
                MYWIFE💗</h4></strong>
        </span>
+    </div>
     </div>
     <!--这里写名字❤！！！-->
     <canvas id="pinkboard"></canvas>
