--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 
 <body>
     <div id="child">
-    <div class="a">
-       <span style="font-family: Arial">
-           <strong><h4>💗I'M SORRY
+           <strong><h4>
+            <div class="a">
+               💗I'M SORRYYY💗
               <br>
-               MYWIFE💗</h4></strong>
-       </span>
-    </div>
+               💗MYWIFE💗
+            </div>
+           </h4></strong>
     </div>
     <!--这里写名字❤！！！-->
     <canvas id="pinkboard"></canvas>
