--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 
 <body>
     <div id="child">
+    <div class="container">
            <strong><h4>
-            <div class="a">
                💗I'M SORRYYY💗
               <br>
                💗MYWIFE💗
-            </div>
            </h4></strong>
+    </div>
     </div>
     <!--这里写名字❤！！！-->
     <canvas id="pinkboard"></canvas>
