--- a/Love.html
+++ b/Love.html
@@ -206,7 +206,7 @@
             // ctx.font="20px";
             ctx.fillStyle = colors[i % 18];
             ctx.fillText(
-                "花无缺，我喜欢你",
+                "💗XIN LŨI RẤC NHÌU💗",
                 this.x - this.width * 0.5,
                 this.y - this.height * 0.5,
                 this.width,
