--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="heart bottom"></div>
     </div>
 
-    <b class="word">我喜欢你！</b>
+    <b class="word">I'm sorry :(( </b>
 
     <script>
         var b = document.body;
