--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="heart bottom"></div>
     </div>
 
-    <b class="word">Tớ chin nũi cậu rất nhìu, hứa lần sau sẽ không cap lại nữa, mong cậu có thể tha lũi cho tớ nha :(( </b>
+    <b class="word">Tớ chin nũi cậu rất nhìu, tớ hứa lần sau sẽ không cap lại nữa, mong cậu có thể tha lũi cho tớ nha. Iu cậu :(( </b>
 
     <script>
         var b = document.body;
