--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             transform: translateY(-50%);
             font-family: 'Love Ya Like A Sister', cursive;
             font-size: 40px;
-            color: #c70012;
+            color: #c80ffff;
             padding: 0 20px;
         }
     </style>
@@ -102,7 +102,7 @@
         <div class="heart bottom"></div>
     </div>
 
-    <b class="word">Tớ chin nũi cậu rất nhìu, tớ hứa lần sau sẽ không cap lại nữa, mong cậu có thể tha lũi cho tớ nha. Iu cậu :(( </b>
+    <b class="word">lêu lêu con chó rách 🤪🤪 </b>
 
     <script>
         var b = document.body;
