--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         .heart {
             position: absolute;
-            box-shadow: 0 0 40px #d5093c;
+            box-shadow: 0 0 40px #80ffff;
             animation: beat .4s ease infinite normal;
             background: linear-gradient(-90deg, #F50A45 0%, #d5093c 40%);
         }
@@ -64,17 +64,17 @@
         @keyframes beat {
             0% {
                 transform: scale(1) rotate(225deg);
-                box-shadow: 0 0 40px #d5093c;
+                box-shadow: 0 0 40px #80ffff;
             }
 
             50% {
                 transform: scale(1.1) rotate(225deg);
-                box-shadow: 0 0 70px #d5093c;
+                box-shadow: 0 0 70px #80ffff;
             }
 
             100% {
                 transform: scale(1) rotate(225deg);
-                box-shadow: 0 0 40px #d5093c;
+                box-shadow: 0 0 40px #80ffff;
                 ;
             }
         }
@@ -88,7 +88,7 @@
             transform: translateY(-50%);
             font-family: 'Love Ya Like A Sister', cursive;
             font-size: 40px;
-            color: #c80ffff;
+            color: #80ffff;
             padding: 0 20px;
         }
     </style>
