--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             position: absolute;
             box-shadow: 0 0 40px #80ffff;
             animation: beat .4s ease infinite normal;
-            background: linear-gradient(-90deg, #F50A45 0%, #d5093c 40%);
+            background: linear-gradient(-90deg, #80ffff 0%, #80ffff 40%);
         }
 
         @keyframes beat {
