--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <title> Dũng Bố Đời </title>
+    <title> Lêu Lêu Con Chó Rách 🤪 </title>
     <meta charset="UTF-8">
     <meta name="Keywords" content="Dũng Bố Đời cụ tổ chúng mài">
     <meta name="Description" content="Dũng Bố Đời cụ tổ chúng mài">
-    <link rel="shortcut icon" href="chinnui/IMG_0074.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="IMG_0074.jpeg" type="image/x-icon">
     <!--     github.com/he-weilai/love-code -->
     <style>
         * {
