--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title> Lêu Lêu Con Chó Rách 🤪 </title>
+    <title> Lêu Lêu Con Chó 🤪 </title>
     <meta charset="UTF-8">
     <meta name="Keywords" content="Dũng Bố Đời cụ tổ chúng mài">
     <meta name="Description" content="Dũng Bố Đời cụ tổ chúng mài">
